--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>More actions
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -209,7 +209,7 @@
       }
     });
 
-    // ✅ Replace with your actual Google Form entry IDs
+    // 
     const GOOGLE_FORM_ACTION = "https://docs.google.com/forms/d/e/1FAIpQLSfR2TBcAWWA2pt5U3XGUsERvgMJDsJR_O_Gh3dwC_BfQtz_iA/formResponse";
     const ENTRY_DEVICE = "entry.1007778584";
     const ENTRY_SERIAL = "entry.578288754";
